// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fnt inspector test show value test show default value 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-fnt-inspector"
    >
      <h1>
        Fnt
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="fnt's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="New Fnt"
          />
        </div>
      </article>
      <article
        className="wonder-textAreaInput"
      >
        <div
          className="content-field content-textarea"
        >
          <div
            className="field-title"
          >
            Fnt Content
          </div>
          <div
            className="field-content"
          >
            <textarea
              className="input-component"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </article>
      <button
        onClick={[Function]}
      >
        submit
      </button>
    </article>
  </article>
</article>
`;

exports[`fnt inspector test show value test show specific value 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-fnt-inspector"
    >
      <h1>
        Fnt
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="fnt's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="aaa"
          />
        </div>
      </article>
      <article
        className="wonder-textAreaInput"
      >
        <div
          className="content-field content-textarea"
        >
          <div
            className="field-title"
          >
            Fnt Content
          </div>
          <div
            className="field-content"
          >
            <textarea
              className="input-component"
              onChange={[Function]}
              type="text"
              value="info face=\\"Lato-Regular\\" size=64 bold=0 italic=0 charset=\\"\\" unicode=1 stretchH=100 smooth=1 aa=2 padding=0,0,0,0 spacing=0,0
common lineHeight=77 base=63 scaleW=512 scaleH=512 pages=1 packed=0 alphaChnl=0 redChnl=0 greenChnl=0 blueChnl=0
page id=0 file=\\"lato.png\\"
chars count=96
char id=10   x=113  y=187  width=32   height=46   xoffset=1    yoffset=17   xadvance=34   page=0    chnl=0
kerning first=123 second=113 amount=-2"
            />
          </div>
        </div>
      </article>
      <button
        onClick={[Function]}
      >
        submit
      </button>
    </article>
  </article>
</article>
`;
